# disrust

./: Cargo.toml
src/: main.rs
src/api/: consts.rs  data.rs  gateway_thread.rs  mod.rs  wrapper.rs
src/model/: channel.rs  event.rs  guild.rs  mod.rs
src/ui/: app.rs  channels.rs  chat_box.rs  gui.rs  mod.rs  stateful_lists.rs
