[package]
name = "disrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
url = "2.2.2"

tui = "0.19"
crossterm = "0.25"
anyhow = "1.0.68"
futures-util = "0.3.28"
futures = "0.3.28"
rand = "0.8.5"
tokio-stream = "0.1.14"
